--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
             <span class="service-card__name">Визитки,
                 буклеты, флаеры, баннеры:</span>
             <div class="service-card__subdesc">Печать и дизайн полиграфии для любых задач</div>
-            <span class="service-card__price">от 30 BYN<sup class="service-card__sup">печать включена</sup></span>
+            <span class="service-card__price">от 30 BYN<sup class="service-card__sup">сидка на печать 50%</sup></span>
           </div>
           <div class="service-card__line">
             <span class="service-card__name">Прайс-листы, бланки,
                 коммерческие предложения,
                 презентации:</span>
             <div class="service-card__subdesc">Документы, которые продают</div>
-            <span class="service-card__price">от 40 BYN<sup class="service-card__sup">печать включена</sup></span>
+            <span class="service-card__price">от 40 BYN<sup class="service-card__sup">сидка на печать 50%</sup></span>
           </div>
           <div class="service-card__line">
             <span class="service-card__name">Логотипы и Фирменный
@@ -114,26 +114,26 @@
               <span class="service-card__name">Сайт-визитка:</span>
               <div class="service-card__subdesc">Лаконичное
                 представление компании</div>
-              <span class="service-card__price">от 300 BYN<sup class="service-card__sup">печать включена</sup></span>
+              <span class="service-card__price">от 300 BYN<sup class="service-card__sup">+подарок</sup></span>
             </div>
             <div class="service-card__line">
               <span class="service-card__name">Лендинг:</span>
               <div class="service-card__subdesc">Продающие
                 одностраничники</div>
-              <span class="service-card__price">от 400 BYN<sup class="service-card__sup">печать включена</sup></span>
+              <span class="service-card__price">от 400 BYN<sup class="service-card__sup">+подарок</sup></span>
             </div>
             <div class="service-card__line">
               <span class="service-card__name">Корпоративный сайт:</span>
               <div class="service-card__subdesc">Многостраничные
                 решения для бизнеса</div>
-              <span class="service-card__price">от 550 BYN<sup class="service-card__sup">аудит бесплатно</sup></span>
+              <span class="service-card__price">от 550 BYN<sup class="service-card__sup">+подарок</sup></span>
             </div>
             <div class="service-card__line">
               <span class="service-card__name">Каталоги и Интернет-
                 магазины:</span>
               <div class="service-card__subdesc">Удобные и
                 функциональные</div>
-              <span class="service-card__price">от 1000 BYN<sup class="service-card__sup">аудит бесплатно</sup></span>
+              <span class="service-card__price">от 1000 BYN<sup class="service-card__sup">+подарок</sup></span>
             </div>
             
           </div>
