--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <p class="cta__subtitle">Бесплатный аудит вашего дизайна/сайта — найдём 3 способа сэкономить</p>
       <div class="cta__actions">
         <a href="deiiweb.pdf" class="cta__btn cta__btn--primary" download target="_blank">Получить PDF презентацию</a>
-        <a href="#" class="cta__btn cta__btn--secondary">Заказать аудит →</a>
+        <a href="#" class="cta__btn cta__btn--secondary">Заказать проект →</a>
       </div>
       <div class="cta__contacts">
         <div class="cta__contact-item"><b>Telegram:</b> <a href="https://t.me/deiiweb" target="_blank">@deiiweb</a></div>
